Fixed issue with third column not expanding to the whole page on tablet view

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -20,6 +20,7 @@ section {
   margin-right: auto;
   margin-left: auto;
   position: relative;
+  overflow: auto;
 }
 
 .content-title {
@@ -48,7 +49,7 @@ section {
   font-family: Arial, Helvetica, sans-serif;
   position: absolute;
   top: 30px;
-  padding: 0 0 0 10px;
+  padding: 0px 10px 0px 10px;
 }
 
 /* Desktop */
@@ -62,10 +63,16 @@ section {
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-6 {
-    width: 50%;
+  .col-md-6, .col-md-12 {
     float: left;
     padding: 10px;
+    height: 100%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-12 {
+    width: 100%;
   }
 }
 
